[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stellar_blockchain_helper_spxc"
version = "0.0.1"
authors = [
  { name="Spxc", email="noreply@email.com" },
]
description = "Simple Stellar helper util."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Spxc/Stellar-blockchain-helper-python"
"Bug Tracker" = "https://github.com/Spxc/Stellar-blockchain-helper-python/issues"